--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="style.css"> 
 </head>
 <body>
+    <div class="title">Etch-a-Sketch
+    <button>Choose Grid Size</button>
+    </div>
     <div class="container"></div>
 </body>
 </html>
